--- a/hero-static-blog-demo/package.json
+++ b/hero-static-blog-demo/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "build:static": "next build & next export",
+    "build:static": "next build && next export",
     "deploy": "now"
   },
   "keywords": [],
